scene intro updated

--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
@@ -165,7 +165,7 @@
     </ClCompile>
     <ClCompile Include="TriggerRocks.cpp">
       <Filter>Scripts\Objects</Filter>
-      </ClCompile>
+    </ClCompile>
     <ClCompile Include="MusicController.cpp">
       <Filter>Scripts\Triggers</Filter>
     </ClCompile>
@@ -173,6 +173,9 @@
       <Filter>Scripts\Intro</Filter>
     </ClCompile>
     <ClCompile Include="FadeImages.cpp">
+      <Filter>Scripts\Intro</Filter>
+    </ClCompile>
+    <ClCompile Include="MoveImages.cpp">
       <Filter>Scripts\Intro</Filter>
     </ClCompile>
   </ItemGroup>
@@ -353,7 +356,7 @@
     </ClInclude>
     <ClInclude Include="TriggerRocks.h">
       <Filter>Scripts\Objects</Filter>
-      </ClInclude>
+    </ClInclude>
     <ClInclude Include="MusicController.h">
       <Filter>Scripts\Triggers</Filter>
     </ClInclude>
@@ -361,6 +364,9 @@
       <Filter>Scripts\Intro</Filter>
     </ClInclude>
     <ClInclude Include="FadeImages.h">
+      <Filter>Scripts\Intro</Filter>
+    </ClInclude>
+    <ClInclude Include="MoveImages.h">
       <Filter>Scripts\Intro</Filter>
     </ClInclude>
   </ItemGroup>
