--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
@@ -156,12 +156,18 @@
     </ClCompile>
     <ClCompile Include="Spawner.cpp">
       <Filter>Scripts\UI\Win Menu</Filter>
-      </ClCompile>
+    </ClCompile>
     <ClCompile Include="RumblerManager.cpp">
       <Filter>Scripts</Filter>
     </ClCompile>
     <ClCompile Include="MusicController.cpp">
       <Filter>Scripts\Triggers</Filter>
+    </ClCompile>
+    <ClCompile Include="CameraShake.cpp">
+      <Filter>Scripts\Cameras</Filter>
+    </ClCompile>
+    <ClCompile Include="CameraUltiMode.cpp">
+      <Filter>Scripts\Cameras</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -175,9 +181,6 @@
       <Filter>Scripts</Filter>
     </ClInclude>
     <ClInclude Include="ReverbZone.h">
-      <Filter>Scripts</Filter>
-    </ClInclude>
-    <ClInclude Include="CameraLimits.h">
       <Filter>Scripts</Filter>
     </ClInclude>
     <ClInclude Include="DialogueManager.h">
@@ -332,12 +335,21 @@
     </ClInclude>
     <ClInclude Include="Scores_Data.h">
       <Filter>Scripts\UI\Win Menu</Filter>
-      </ClInclude>
+    </ClInclude>
     <ClInclude Include="RumblerManager.h">
       <Filter>Scripts</Filter>
     </ClInclude>
     <ClInclude Include="MusicController.h">
       <Filter>Scripts\Triggers</Filter>
+    </ClInclude>
+    <ClInclude Include="CameraShake.h">
+      <Filter>Scripts\Cameras</Filter>
+    </ClInclude>
+    <ClInclude Include="CameraUltiMode.h">
+      <Filter>Scripts\Cameras</Filter>
+    </ClInclude>
+    <ClInclude Include="CameraLimits.h">
+      <Filter>Scripts\Cameras</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
