--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
@@ -253,6 +253,7 @@
     <ClCompile Include="CheckPoints_Manager.cpp" />
     <ClCompile Include="FadeImages.cpp" />
     <ClCompile Include="Ghoul.cpp" />
+    <ClCompile Include="MeleeLeshen.cpp" />
     <ClCompile Include="MoveImages.cpp" />
     <ClCompile Include="MusicController.cpp" />
     <ClCompile Include="Head_Script.cpp" />
