Reworked state machine to state interface pattern

--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
@@ -226,6 +226,7 @@
     <ClInclude Include="Spawner.h" />
     <ClInclude Include="RumblerManager.h" />
     <ClInclude Include="Stat.h" />
+    <ClInclude Include="State.h" />
     <ClInclude Include="Subtitle.h" />
     <ClInclude Include="TeleportLevel.h" />
     <ClInclude Include="TriggerFog.h" />
@@ -291,6 +292,7 @@
     <ClCompile Include="Spawner.cpp" />
     <ClCompile Include="RumblerManager.cpp" />
     <ClCompile Include="Stat.cpp" />
+    <ClCompile Include="State.cpp" />
     <ClCompile Include="Subtitle.cpp" />
     <ClCompile Include="TeleportLevel.cpp" />
     <ClCompile Include="TriggerFog.cpp" />
