--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
@@ -196,6 +196,9 @@
     <ClCompile Include="UltiBar.cpp">
       <Filter>Scripts\UI\HUD</Filter>
     </ClCompile>
+    <ClCompile Include="State.cpp">
+      <Filter>Scripts\Player</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Macros\AlienScripts.h">
@@ -401,6 +404,9 @@
     </ClInclude>
     <ClInclude Include="UltiBar.h">
       <Filter>Scripts\UI\HUD</Filter>
+    </ClInclude>
+    <ClInclude Include="State.h">
+      <Filter>Scripts\Player</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
