created boss parent class

--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
@@ -176,13 +176,13 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="ArrowScript.h" />
+    <ClInclude Include="Boss.h" />
     <ClInclude Include="BreakableObject.h" />
     <ClInclude Include="CameraEnterExit.h" />
     <ClInclude Include="CameraLimits.h" />
     <ClInclude Include="CameraMovement.h" />
     <ClInclude Include="CameraShake.h" />
     <ClInclude Include="CameraUltiMode.h" />
-    <ClInclude Include="CloudLeshen.h" />
     <ClInclude Include="CrowsLeshen.h" />
     <ClInclude Include="Leshen.h" />
     <ClInclude Include="CheckPoint.h" />
@@ -242,20 +242,19 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ArrowScript.cpp" />
+    <ClCompile Include="Boss.cpp" />
     <ClCompile Include="BreakableObject.cpp" />
     <ClCompile Include="CameraEnterExit.cpp" />
     <ClCompile Include="CameraLimits.cpp" />
     <ClCompile Include="CameraMovement.cpp" />
     <ClCompile Include="CameraShake.cpp" />
     <ClCompile Include="CameraUltiMode.cpp" />
-    <ClCompile Include="CloudLeshen.cpp" />
     <ClCompile Include="CrowsLeshen.cpp" />
     <ClCompile Include="Leshen.cpp" />
     <ClCompile Include="CheckPoint.cpp" />
     <ClCompile Include="CheckPoints_Manager.cpp" />
     <ClCompile Include="FadeImages.cpp" />
     <ClCompile Include="Ghoul.cpp" />
-    <ClCompile Include="MeleeLeshen.cpp" />
     <ClCompile Include="MoveImages.cpp" />
     <ClCompile Include="MusicController.cpp" />
     <ClCompile Include="Head_Script.cpp" />
