--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
@@ -142,13 +142,7 @@
     <ClCompile Include="RootLeshen.cpp">
       <Filter>Scripts\Enemies</Filter>
     </ClCompile>
-    <ClCompile Include="CloudLeshen.cpp">
-      <Filter>Scripts\Enemies</Filter>
-    </ClCompile>
     <ClCompile Include="CrowsLeshen.cpp">
-      <Filter>Scripts\Enemies</Filter>
-    </ClCompile>
-    <ClCompile Include="MeleeLeshen.cpp">
       <Filter>Scripts\Enemies</Filter>
     </ClCompile>
     <ClCompile Include="RockSpawner.cpp">
@@ -195,6 +189,9 @@
     </ClCompile>
     <ClCompile Include="UltiBar.cpp">
       <Filter>Scripts\UI\HUD</Filter>
+    </ClCompile>
+    <ClCompile Include="Boss.cpp">
+      <Filter>Scripts\Enemies</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -348,9 +345,6 @@
     <ClInclude Include="RootLeshen.h">
       <Filter>Scripts\Enemies</Filter>
     </ClInclude>
-    <ClInclude Include="CloudLeshen.h">
-      <Filter>Scripts\Enemies</Filter>
-    </ClInclude>
     <ClInclude Include="CrowsLeshen.h">
       <Filter>Scripts\Enemies</Filter>
     </ClInclude>
@@ -401,6 +395,9 @@
     </ClInclude>
     <ClInclude Include="UltiBar.h">
       <Filter>Scripts\UI\HUD</Filter>
+    </ClInclude>
+    <ClInclude Include="Boss.h">
+      <Filter>Scripts\Enemies</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
