Working on enemies

--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
@@ -192,6 +192,9 @@
     <ClInclude Include="MoveImages.h" />
     <ClInclude Include="MusicController.h" />
     <ClInclude Include="Head_Script.h" />
+    <ClInclude Include="NilfSoldierMelee.h" />
+    <ClInclude Include="NilfSoldierRange.h" />
+    <ClInclude Include="NilfSoldierShield.h" />
     <ClInclude Include="PlayerManager.h" />
     <ClInclude Include="DebugManager.h" />
     <ClInclude Include="DialogueManager.h" />
@@ -259,6 +262,9 @@
     <ClCompile Include="MoveImages.cpp" />
     <ClCompile Include="MusicController.cpp" />
     <ClCompile Include="Head_Script.cpp" />
+    <ClCompile Include="NilfSoldierMelee.cpp" />
+    <ClCompile Include="NilfSoldierRange.cpp" />
+    <ClCompile Include="NilfSoldierShield.cpp" />
     <ClCompile Include="PlayerManager.cpp" />
     <ClCompile Include="DebugManager.cpp" />
     <ClCompile Include="DialogueManager.cpp" />
