--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
@@ -37,16 +37,10 @@
     <ClCompile Include="Stat.cpp">
       <Filter>Scripts\Stats and Effects</Filter>
     </ClCompile>
-    <ClCompile Include="ArrowScript.cpp">
-      <Filter>Scripts\Enemies</Filter>
-    </ClCompile>
     <ClCompile Include="Enemy.cpp">
       <Filter>Scripts\Enemies</Filter>
     </ClCompile>
     <ClCompile Include="EnemyManager.cpp">
-      <Filter>Scripts\Enemies</Filter>
-    </ClCompile>
-    <ClCompile Include="NilfgaardSoldier.cpp">
       <Filter>Scripts\Enemies</Filter>
     </ClCompile>
     <ClCompile Include="Extra_Menus.cpp">
@@ -196,6 +190,21 @@
     <ClCompile Include="UltiBar.cpp">
       <Filter>Scripts\UI\HUD</Filter>
     </ClCompile>
+    <ClCompile Include="NilfgaardSoldier.cpp">
+      <Filter>Scripts\Enemies\NilfgaardSoldier</Filter>
+    </ClCompile>
+    <ClCompile Include="ArrowScript.cpp">
+      <Filter>Scripts\Enemies\NilfgaardSoldier</Filter>
+    </ClCompile>
+    <ClCompile Include="NilfSoldierMelee.cpp">
+      <Filter>Scripts\Enemies\NilfgaardSoldier</Filter>
+    </ClCompile>
+    <ClCompile Include="NilfSoldierRange.cpp">
+      <Filter>Scripts\Enemies\NilfgaardSoldier</Filter>
+    </ClCompile>
+    <ClCompile Include="NilfSoldierShield.cpp">
+      <Filter>Scripts\Enemies\NilfgaardSoldier</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Macros\AlienScripts.h">
@@ -234,16 +243,10 @@
     <ClInclude Include="Stat.h">
       <Filter>Scripts\Stats and Effects</Filter>
     </ClInclude>
-    <ClInclude Include="ArrowScript.h">
-      <Filter>Scripts\Enemies</Filter>
-    </ClInclude>
     <ClInclude Include="Enemy.h">
       <Filter>Scripts\Enemies</Filter>
     </ClInclude>
     <ClInclude Include="EnemyManager.h">
-      <Filter>Scripts\Enemies</Filter>
-    </ClInclude>
-    <ClInclude Include="NilfgaardSoldier.h">
       <Filter>Scripts\Enemies</Filter>
     </ClInclude>
     <ClInclude Include="Extra_Menus.h">
@@ -402,6 +405,21 @@
     <ClInclude Include="UltiBar.h">
       <Filter>Scripts\UI\HUD</Filter>
     </ClInclude>
+    <ClInclude Include="NilfgaardSoldier.h">
+      <Filter>Scripts\Enemies\NilfgaardSoldier</Filter>
+    </ClInclude>
+    <ClInclude Include="ArrowScript.h">
+      <Filter>Scripts\Enemies\NilfgaardSoldier</Filter>
+    </ClInclude>
+    <ClInclude Include="NilfSoldierMelee.h">
+      <Filter>Scripts\Enemies\NilfgaardSoldier</Filter>
+    </ClInclude>
+    <ClInclude Include="NilfSoldierRange.h">
+      <Filter>Scripts\Enemies\NilfgaardSoldier</Filter>
+    </ClInclude>
+    <ClInclude Include="NilfSoldierShield.h">
+      <Filter>Scripts\Enemies\NilfgaardSoldier</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Scripts">
@@ -445,6 +463,9 @@
     </Filter>
     <Filter Include="Scripts\UI\Buttons">
       <UniqueIdentifier>{f93cdcf6-5f41-4046-8018-b95261895855}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Scripts\Enemies\NilfgaardSoldier">
+      <UniqueIdentifier>{c5f096cc-8f1f-4228-93e0-09cafe4cdb34}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
 </Project>
