MiniGame Prototype working

--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
@@ -196,6 +196,9 @@
     <ClCompile Include="UltiBar.cpp">
       <Filter>Scripts\UI\HUD</Filter>
     </ClCompile>
+    <ClCompile Include="MiniGame_Revive.cpp">
+      <Filter>Scripts\Player\Revive</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Macros\AlienScripts.h">
@@ -402,6 +405,9 @@
     <ClInclude Include="UltiBar.h">
       <Filter>Scripts\UI\HUD</Filter>
     </ClInclude>
+    <ClInclude Include="MiniGame_Revive.h">
+      <Filter>Scripts\Player\Revive</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Scripts">
@@ -445,6 +451,9 @@
     </Filter>
     <Filter Include="Scripts\UI\Buttons">
       <UniqueIdentifier>{f93cdcf6-5f41-4046-8018-b95261895855}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Scripts\Player\Revive">
+      <UniqueIdentifier>{546ad57c-6a02-4b53-941b-0eb50481a441}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
 </Project>
