--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
@@ -189,6 +189,7 @@
     <ClInclude Include="CheckPoints_Manager.h" />
     <ClInclude Include="FadeImages.h" />
     <ClInclude Include="Ghoul.h" />
+    <ClInclude Include="MiniGame_Revive.h" />
     <ClInclude Include="MoveImages.h" />
     <ClInclude Include="MusicController.h" />
     <ClInclude Include="Head_Script.h" />
@@ -256,6 +257,7 @@
     <ClCompile Include="FadeImages.cpp" />
     <ClCompile Include="Ghoul.cpp" />
     <ClCompile Include="MeleeLeshen.cpp" />
+    <ClCompile Include="MiniGame_Revive.cpp" />
     <ClCompile Include="MoveImages.cpp" />
     <ClCompile Include="MusicController.cpp" />
     <ClCompile Include="Head_Script.cpp" />
