Minigame polish with effects

--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
@@ -198,7 +198,7 @@
     </ClCompile>
     <ClCompile Include="MiniGame_Revive.cpp">
       <Filter>Scripts\Player\Revive</Filter>
-      </ClCompile>
+    </ClCompile>
     <ClCompile Include="State.cpp">
       <Filter>Scripts\Player</Filter>
     </ClCompile>
@@ -410,6 +410,9 @@
     </ClInclude>
     <ClInclude Include="State.h">
       <Filter>Scripts\Player</Filter>
+    </ClInclude>
+    <ClInclude Include="MiniGame_Revive.h">
+      <Filter>Scripts\Player\Revive</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
