--- a/The Witcher/CoreData/Configuration/Layouts/Default.ini
+++ b/The Witcher/CoreData/Configuration/Layouts/Default.ini
@@ -79,32 +79,32 @@ Size=621,794
 Collapsed=0
 
 [Window][Configuration]
-Pos=1590,84
-Size=330,927
+Pos=1527,87
+Size=393,970
 Collapsed=0
 DockId=0x00000003,2
 
 [Window][Console]
-Pos=0,744
-Size=1588,267
+Pos=0,777
+Size=1525,280
 Collapsed=0
 DockId=0x00000006,0
 
 [Window][Render Options]
-Pos=1590,84
-Size=330,927
+Pos=1527,87
+Size=393,970
 Collapsed=0
 DockId=0x00000003,1
 
 [Window][Panel Hierarchy]
-Pos=0,84
-Size=197,658
+Pos=0,87
+Size=234,688
 Collapsed=0
 DockId=0x00000001,0
 
 [Window][Inspector]
-Pos=1590,84
-Size=330,927
+Pos=1527,87
+Size=393,970
 Collapsed=0
 DockId=0x00000003,0
 
@@ -115,12 +115,12 @@ Collapsed=0
 
 [Window][DockSpace BackGround]
 Pos=0,0
-Size=1920,1011
+Size=1920,1057
 Collapsed=0
 
 [Window][Scene]
-Pos=199,84
-Size=1389,658
+Pos=236,87
+Size=1289,688
 Collapsed=0
 DockId=0x00000009,0
 
@@ -134,14 +134,14 @@ Size=565,398
 Collapsed=0
 
 [Window][Project]
-Pos=0,744
-Size=1588,267
+Pos=0,777
+Size=1525,280
 Collapsed=0
 DockId=0x00000006,1
 
 [Window][Game]
-Pos=199,84
-Size=1389,658
+Pos=236,87
+Size=1289,688
 Collapsed=0
 DockId=0x00000009,2
 
@@ -153,7 +153,7 @@ DockId=0x0000000D,0
 
 [Window][## Tools]
 Pos=0,19
-Size=1920,63
+Size=1920,66
 Collapsed=0
 DockId=0x00000010,0
 
@@ -164,14 +164,14 @@ Collapsed=0
 DockId=0x00000009,2
 
 [Window][Animation Timeline]
-Pos=0,744
-Size=1588,267
+Pos=0,777
+Size=1525,280
 Collapsed=0
 DockId=0x00000006,2
 
 [Window][Animator]
-Pos=199,84
-Size=1389,658
+Pos=236,87
+Size=1289,688
 Collapsed=0
 DockId=0x00000009,1
 
@@ -186,21 +186,21 @@ Size=192,134
 Collapsed=0
 
 [Docking][Data]
-DockSpace                 ID=0x81802EEE Window=0xF3A9BAEC Pos=0,48 Size=1920,992 Split=Y
+DockSpace                 ID=0x81802EEE Window=0xF3A9BAEC Pos=0,42 Size=1920,1038 Split=Y
   DockNode                ID=0x00000010 Parent=0x81802EEE SizeRef=1600,52 HiddenTabBar=1 Selected=0x063B9A85
   DockNode                ID=0x00000011 Parent=0x81802EEE SizeRef=1600,764 Split=Y
     DockNode              ID=0x0000000D Parent=0x00000011 SizeRef=1200,45 HiddenTabBar=1 Selected=0x76AC6852
     DockNode              ID=0x0000000E Parent=0x00000011 SizeRef=1200,991 Split=X
-      DockNode            ID=0x00000002 Parent=0x0000000E SizeRef=1588,631 Split=Y
+      DockNode            ID=0x00000002 Parent=0x0000000E SizeRef=1525,631 Split=Y
         DockNode          ID=0x00000005 Parent=0x00000002 SizeRef=1200,662 Split=X
           DockNode        ID=0x0000000B Parent=0x00000005 SizeRef=843,631 Split=X
             DockNode      ID=0x00000004 Parent=0x0000000B SizeRef=836,631 Split=Y
               DockNode    ID=0x00000007 Parent=0x00000004 SizeRef=547,414 Split=X Selected=0x876DFDF0
-                DockNode  ID=0x00000001 Parent=0x00000007 SizeRef=197,631 Selected=0x876DFDF0
-                DockNode  ID=0x00000009 Parent=0x00000007 SizeRef=1389,631 CentralNode=1 Selected=0x83199EB2
+                DockNode  ID=0x00000001 Parent=0x00000007 SizeRef=234,631 Selected=0x876DFDF0
+                DockNode  ID=0x00000009 Parent=0x00000007 SizeRef=1289,631 CentralNode=1 Selected=0x18B8C0DE
               DockNode    ID=0x00000008 Parent=0x00000004 SizeRef=547,215 Selected=0x169CEE22
             DockNode      ID=0x0000000A Parent=0x0000000B SizeRef=362,631 Selected=0xF02CD328
           DockNode        ID=0x0000000C Parent=0x00000005 SizeRef=355,631 Selected=0xF02CD328
         DockNode          ID=0x00000006 Parent=0x00000002 SizeRef=1200,269 Selected=0xE00EE972
-      DockNode            ID=0x00000003 Parent=0x0000000E SizeRef=330,631 Selected=0xF02CD328
+      DockNode            ID=0x00000003 Parent=0x0000000E SizeRef=393,631 Selected=0xF02CD328
 
