--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
@@ -204,9 +204,15 @@
     </ClCompile>
     <ClCompile Include="NilfSoldierShield.cpp">
       <Filter>Scripts\Enemies\NilfgaardSoldier</Filter>
- </ClCompile>
+    </ClCompile>
     <ClCompile Include="State.cpp">
       <Filter>Scripts\Player</Filter>
+    </ClCompile>
+    <ClCompile Include="Drowned.cpp">
+      <Filter>Scripts\Enemies\Drowned</Filter>
+    </ClCompile>
+    <ClCompile Include="DrownedRange.cpp">
+      <Filter>Scripts\Enemies\Drowned</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -422,9 +428,15 @@
     </ClInclude>
     <ClInclude Include="NilfSoldierShield.h">
       <Filter>Scripts\Enemies\NilfgaardSoldier</Filter>
-  </ClInclude>
+    </ClInclude>
     <ClInclude Include="State.h">
       <Filter>Scripts\Player</Filter>
+    </ClInclude>
+    <ClInclude Include="Drowned.h">
+      <Filter>Scripts\Enemies\Drowned</Filter>
+    </ClInclude>
+    <ClInclude Include="DrownedRange.h">
+      <Filter>Scripts\Enemies\Drowned</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -472,6 +484,9 @@
     </Filter>
     <Filter Include="Scripts\Enemies\NilfgaardSoldier">
       <UniqueIdentifier>{c5f096cc-8f1f-4228-93e0-09cafe4cdb34}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Scripts\Enemies\Drowned">
+      <UniqueIdentifier>{f55fa272-c18f-49cd-bfe0-509b57205c1c}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
 </Project>
