--- a/The Witcher/CoreData/Configuration/Layouts/Default.ini
+++ b/The Witcher/CoreData/Configuration/Layouts/Default.ini
@@ -79,32 +79,32 @@ Size=621,794
 Collapsed=0
 
 [Window][Configuration]
-Pos=1527,87
-Size=393,970
+Pos=1507,87
+Size=413,970
 Collapsed=0
 DockId=0x00000003,2
 
 [Window][Console]
 Pos=0,777
-Size=1525,280
+Size=1505,280
 Collapsed=0
 DockId=0x00000006,0
 
 [Window][Render Options]
-Pos=1527,87
-Size=393,970
+Pos=1507,87
+Size=413,970
 Collapsed=0
 DockId=0x00000003,1
 
 [Window][Panel Hierarchy]
 Pos=0,87
-Size=234,688
+Size=277,688
 Collapsed=0
 DockId=0x00000001,0
 
 [Window][Inspector]
-Pos=1527,87
-Size=393,970
+Pos=1507,87
+Size=413,970
 Collapsed=0
 DockId=0x00000003,0
 
@@ -119,8 +119,8 @@ Size=1920,1057
 Collapsed=0
 
 [Window][Scene]
-Pos=236,87
-Size=1289,688
+Pos=279,87
+Size=1226,688
 Collapsed=0
 DockId=0x00000009,0
 
@@ -135,13 +135,13 @@ Collapsed=0
 
 [Window][Project]
 Pos=0,777
-Size=1525,280
+Size=1505,280
 Collapsed=0
 DockId=0x00000006,1
 
 [Window][Game]
-Pos=236,87
-Size=1289,688
+Pos=279,87
+Size=1226,688
 Collapsed=0
 DockId=0x00000009,2
 
@@ -165,13 +165,13 @@ DockId=0x00000009,2
 
 [Window][Animation Timeline]
 Pos=0,777
-Size=1525,280
+Size=1505,280
 Collapsed=0
 DockId=0x00000006,2
 
 [Window][Animator]
-Pos=236,87
-Size=1289,688
+Pos=279,87
+Size=1226,688
 Collapsed=0
 DockId=0x00000009,1
 
@@ -191,16 +191,16 @@ DockSpace                 ID=0x81802EEE Window=0xF3A9BAEC Pos=0,42 Size=1920,103
   DockNode                ID=0x00000011 Parent=0x81802EEE SizeRef=1600,764 Split=Y
     DockNode              ID=0x0000000D Parent=0x00000011 SizeRef=1200,45 HiddenTabBar=1 Selected=0x76AC6852
     DockNode              ID=0x0000000E Parent=0x00000011 SizeRef=1200,991 Split=X
-      DockNode            ID=0x00000002 Parent=0x0000000E SizeRef=1525,631 Split=Y
+      DockNode            ID=0x00000002 Parent=0x0000000E SizeRef=1505,631 Split=Y
         DockNode          ID=0x00000005 Parent=0x00000002 SizeRef=1200,662 Split=X
           DockNode        ID=0x0000000B Parent=0x00000005 SizeRef=843,631 Split=X
             DockNode      ID=0x00000004 Parent=0x0000000B SizeRef=836,631 Split=Y
               DockNode    ID=0x00000007 Parent=0x00000004 SizeRef=547,414 Split=X Selected=0x876DFDF0
-                DockNode  ID=0x00000001 Parent=0x00000007 SizeRef=234,631 Selected=0x876DFDF0
-                DockNode  ID=0x00000009 Parent=0x00000007 SizeRef=1289,631 CentralNode=1 Selected=0x18B8C0DE
+                DockNode  ID=0x00000001 Parent=0x00000007 SizeRef=277,631 Selected=0x876DFDF0
+                DockNode  ID=0x00000009 Parent=0x00000007 SizeRef=1226,631 CentralNode=1 Selected=0x83199EB2
               DockNode    ID=0x00000008 Parent=0x00000004 SizeRef=547,215 Selected=0x169CEE22
             DockNode      ID=0x0000000A Parent=0x0000000B SizeRef=362,631 Selected=0xF02CD328
           DockNode        ID=0x0000000C Parent=0x00000005 SizeRef=355,631 Selected=0xF02CD328
-        DockNode          ID=0x00000006 Parent=0x00000002 SizeRef=1200,269 Selected=0xE00EE972
-      DockNode            ID=0x00000003 Parent=0x0000000E SizeRef=393,631 Selected=0xF02CD328
+        DockNode          ID=0x00000006 Parent=0x00000002 SizeRef=1200,269 Selected=0xF9BEF62A
+      DockNode            ID=0x00000003 Parent=0x0000000E SizeRef=413,631 Selected=0xF02CD328
 
