--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
@@ -97,9 +97,6 @@
     <ClCompile Include="RockFall.cpp">
       <Filter>Scripts</Filter>
     </ClCompile>
-    <ClCompile Include="Ghoul.cpp">
-      <Filter>Scripts\Enemies</Filter>
-    </ClCompile>
     <ClCompile Include="RelicManager.cpp">
       <Filter>Scripts\Stats and Effects</Filter>
     </ClCompile>
@@ -129,21 +126,6 @@
     </ClCompile>
     <ClCompile Include="TriggerFog.cpp">
       <Filter>Scripts\Triggers</Filter>
-    </ClCompile>
-    <ClCompile Include="Leshen.cpp">
-      <Filter>Scripts\Enemies</Filter>
-    </ClCompile>
-    <ClCompile Include="RootLeshen.cpp">
-      <Filter>Scripts\Enemies</Filter>
-    </ClCompile>
-    <ClCompile Include="CloudLeshen.cpp">
-      <Filter>Scripts\Enemies</Filter>
-    </ClCompile>
-    <ClCompile Include="CrowsLeshen.cpp">
-      <Filter>Scripts\Enemies</Filter>
-    </ClCompile>
-    <ClCompile Include="MeleeLeshen.cpp">
-      <Filter>Scripts\Enemies</Filter>
     </ClCompile>
     <ClCompile Include="RockSpawner.cpp">
       <Filter>Scripts\Objects</Filter>
@@ -213,6 +195,24 @@
     </ClCompile>
     <ClCompile Include="DrownedRange.cpp">
       <Filter>Scripts\Enemies\Drowned</Filter>
+    </ClCompile>
+    <ClCompile Include="Ghoul.cpp">
+      <Filter>Scripts\Enemies\Ghoul</Filter>
+    </ClCompile>
+    <ClCompile Include="CloudLeshen.cpp">
+      <Filter>Scripts\Enemies\Leshen</Filter>
+    </ClCompile>
+    <ClCompile Include="CrowsLeshen.cpp">
+      <Filter>Scripts\Enemies\Leshen</Filter>
+    </ClCompile>
+    <ClCompile Include="Leshen.cpp">
+      <Filter>Scripts\Enemies\Leshen</Filter>
+    </ClCompile>
+    <ClCompile Include="MeleeLeshen.cpp">
+      <Filter>Scripts\Enemies\Leshen</Filter>
+    </ClCompile>
+    <ClCompile Include="RootLeshen.cpp">
+      <Filter>Scripts\Enemies\Leshen</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -318,9 +318,6 @@
     <ClInclude Include="RockFall.h">
       <Filter>Scripts</Filter>
     </ClInclude>
-    <ClInclude Include="Ghoul.h">
-      <Filter>Scripts\Enemies</Filter>
-    </ClInclude>
     <ClInclude Include="RelicManager.h">
       <Filter>Scripts\Stats and Effects</Filter>
     </ClInclude>
@@ -353,18 +350,6 @@
     </ClInclude>
     <ClInclude Include="TriggerFog.h">
       <Filter>Scripts\Triggers</Filter>
-    </ClInclude>
-    <ClInclude Include="Leshen.h">
-      <Filter>Scripts\Enemies</Filter>
-    </ClInclude>
-    <ClInclude Include="RootLeshen.h">
-      <Filter>Scripts\Enemies</Filter>
-    </ClInclude>
-    <ClInclude Include="CloudLeshen.h">
-      <Filter>Scripts\Enemies</Filter>
-    </ClInclude>
-    <ClInclude Include="CrowsLeshen.h">
-      <Filter>Scripts\Enemies</Filter>
     </ClInclude>
     <ClInclude Include="RockSpawner.h">
       <Filter>Scripts\Objects</Filter>
@@ -438,6 +423,21 @@
     <ClInclude Include="DrownedRange.h">
       <Filter>Scripts\Enemies\Drowned</Filter>
     </ClInclude>
+    <ClInclude Include="Ghoul.h">
+      <Filter>Scripts\Enemies\Ghoul</Filter>
+    </ClInclude>
+    <ClInclude Include="CloudLeshen.h">
+      <Filter>Scripts\Enemies\Leshen</Filter>
+    </ClInclude>
+    <ClInclude Include="CrowsLeshen.h">
+      <Filter>Scripts\Enemies\Leshen</Filter>
+    </ClInclude>
+    <ClInclude Include="Leshen.h">
+      <Filter>Scripts\Enemies\Leshen</Filter>
+    </ClInclude>
+    <ClInclude Include="RootLeshen.h">
+      <Filter>Scripts\Enemies\Leshen</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Scripts">
@@ -487,6 +487,12 @@
     </Filter>
     <Filter Include="Scripts\Enemies\Drowned">
       <UniqueIdentifier>{f55fa272-c18f-49cd-bfe0-509b57205c1c}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Scripts\Enemies\Ghoul">
+      <UniqueIdentifier>{2af96abb-4b10-42dc-a8fb-9010c0177982}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Scripts\Enemies\Leshen">
+      <UniqueIdentifier>{aa9f3c92-5866-4017-810c-01715c2b2a73}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
 </Project>
