Working on Quen Spell Effect. Barrier spawns and absorbs first hit.

--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
@@ -184,6 +184,7 @@
     <ClInclude Include="CameraUltiMode.h" />
     <ClInclude Include="CloudLeshen.h" />
     <ClInclude Include="CrowsLeshen.h" />
+    <ClInclude Include="EffectsFactory.h" />
     <ClInclude Include="Leshen.h" />
     <ClInclude Include="CheckPoint.h" />
     <ClInclude Include="CheckPoints_Manager.h" />
@@ -251,6 +252,7 @@
     <ClCompile Include="CameraUltiMode.cpp" />
     <ClCompile Include="CloudLeshen.cpp" />
     <ClCompile Include="CrowsLeshen.cpp" />
+    <ClCompile Include="EffectsFactory.cpp" />
     <ClCompile Include="Leshen.cpp" />
     <ClCompile Include="CheckPoint.cpp" />
     <ClCompile Include="CheckPoints_Manager.cpp" />
