--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
@@ -199,6 +199,9 @@
     <ClCompile Include="State.cpp">
       <Filter>Scripts\Player</Filter>
     </ClCompile>
+    <ClCompile Include="Bonfire.cpp">
+      <Filter>Scripts\Objects</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Macros\AlienScripts.h">
@@ -407,6 +410,9 @@
     </ClInclude>
     <ClInclude Include="State.h">
       <Filter>Scripts\Player</Filter>
+    </ClInclude>
+    <ClInclude Include="Bonfire.h">
+      <Filter>Scripts\Objects</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
