--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
@@ -217,6 +217,9 @@
     <ClCompile Include="RootLeshen.cpp">
       <Filter>Scripts\Enemies\Leshen</Filter>
     </ClCompile>
+    <ClCompile Include="EffectArea.cpp">
+      <Filter>Scripts</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Macros\AlienScripts.h">
@@ -443,6 +446,9 @@
     </ClInclude>
     <ClInclude Include="RootLeshen.h">
       <Filter>Scripts\Enemies\Leshen</Filter>
+    </ClInclude>
+    <ClInclude Include="EffectArea.h">
+      <Filter>Scripts</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
