--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
@@ -184,6 +184,7 @@
     <ClInclude Include="CameraUltiMode.h" />
     <ClInclude Include="CloudLeshen.h" />
     <ClInclude Include="CrowsLeshen.h" />
+    <ClInclude Include="DashCollider.h" />
     <ClInclude Include="EffectsFactory.h" />
     <ClInclude Include="Drowned.h" />
     <ClInclude Include="DrownedRange.h" />
@@ -257,6 +258,7 @@
     <ClCompile Include="CameraUltiMode.cpp" />
     <ClCompile Include="CloudLeshen.cpp" />
     <ClCompile Include="CrowsLeshen.cpp" />
+    <ClCompile Include="DashCollider.cpp" />
     <ClCompile Include="EffectsFactory.cpp" />
     <ClCompile Include="Drowned.cpp" />
     <ClCompile Include="DrownedRange.cpp" />
