--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
@@ -186,6 +186,8 @@
     <ClInclude Include="CrowsLeshen.h" />
     <ClInclude Include="Drowned.h" />
     <ClInclude Include="DrownedRange.h" />
+    <ClInclude Include="GhoulDodge.h" />
+    <ClInclude Include="GhoulOriginal.h" />
     <ClInclude Include="Leshen.h" />
     <ClInclude Include="CheckPoint.h" />
     <ClInclude Include="CheckPoints_Manager.h" />
@@ -258,6 +260,8 @@
     <ClCompile Include="CrowsLeshen.cpp" />
     <ClCompile Include="Drowned.cpp" />
     <ClCompile Include="DrownedRange.cpp" />
+    <ClCompile Include="GhoulDodge.cpp" />
+    <ClCompile Include="GhoulOriginal.cpp" />
     <ClCompile Include="Leshen.cpp" />
     <ClCompile Include="CheckPoint.cpp" />
     <ClCompile Include="CheckPoints_Manager.cpp" />
