--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
@@ -214,6 +214,12 @@
     <ClCompile Include="RootLeshen.cpp">
       <Filter>Scripts\Enemies\Leshen</Filter>
     </ClCompile>
+    <ClCompile Include="GhoulDodge.cpp">
+      <Filter>Scripts\Enemies\Ghoul</Filter>
+    </ClCompile>
+    <ClCompile Include="GhoulOriginal.cpp">
+      <Filter>Scripts\Enemies\Ghoul</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Macros\AlienScripts.h">
@@ -437,6 +443,12 @@
     </ClInclude>
     <ClInclude Include="RootLeshen.h">
       <Filter>Scripts\Enemies\Leshen</Filter>
+    </ClInclude>
+    <ClInclude Include="GhoulDodge.h">
+      <Filter>Scripts\Enemies\Ghoul</Filter>
+    </ClInclude>
+    <ClInclude Include="GhoulOriginal.h">
+      <Filter>Scripts\Enemies\Ghoul</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
