obstacle parent and children

--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
@@ -176,6 +176,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="ArrowScript.h" />
+    <ClInclude Include="BlockerObstacle.h" />
     <ClInclude Include="Bonfire.h" />
     <ClInclude Include="BreakableObject.h" />
     <ClInclude Include="CameraEnterExit.h" />
@@ -244,6 +245,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ArrowScript.cpp" />
+    <ClCompile Include="BlockerObstacle.cpp" />
     <ClCompile Include="Bonfire.cpp" />
     <ClCompile Include="BreakableObject.cpp" />
     <ClCompile Include="CameraEnterExit.cpp" />
