--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
@@ -202,6 +202,9 @@
     <ClCompile Include="Bonfire.cpp">
       <Filter>Scripts\Objects</Filter>
     </ClCompile>
+    <ClCompile Include="BlockerObstacle.cpp">
+      <Filter>Scripts\Objects</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Macros\AlienScripts.h">
@@ -412,6 +415,9 @@
       <Filter>Scripts\Player</Filter>
     </ClInclude>
     <ClInclude Include="Bonfire.h">
+      <Filter>Scripts\Objects</Filter>
+    </ClInclude>
+    <ClInclude Include="BlockerObstacle.h">
       <Filter>Scripts\Objects</Filter>
     </ClInclude>
   </ItemGroup>
