--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
@@ -186,6 +186,7 @@
     <ClInclude Include="CloudLeshen.h" />
     <ClInclude Include="CrowsLeshen.h" />
     <ClInclude Include="DashCollider.h" />
+    <ClInclude Include="Dummie.h" />
     <ClInclude Include="EffectsFactory.h" />
     <ClInclude Include="Drowned.h" />
     <ClInclude Include="DrownedRange.h" />
@@ -266,6 +267,7 @@
     <ClCompile Include="CloudLeshen.cpp" />
     <ClCompile Include="CrowsLeshen.cpp" />
     <ClCompile Include="DashCollider.cpp" />
+    <ClCompile Include="Dummie.cpp" />
     <ClCompile Include="EffectsFactory.cpp" />
     <ClCompile Include="Drowned.cpp" />
     <ClCompile Include="DrownedRange.cpp" />
