--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
@@ -238,6 +238,9 @@
     <ClCompile Include="GhoulOriginal.cpp">
       <Filter>Scripts\Enemies\Ghoul</Filter>
     </ClCompile>
+    <ClCompile Include="Dummie.cpp">
+      <Filter>Scripts\Objects</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Macros\AlienScripts.h">
@@ -485,6 +488,9 @@
     </ClInclude>
     <ClInclude Include="GhoulOriginal.h">
       <Filter>Scripts\Enemies\Ghoul</Filter>
+    </ClInclude>
+    <ClInclude Include="Dummie.h">
+      <Filter>Scripts\Objects</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
