ciri original and fight controller started

--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
@@ -184,6 +184,8 @@
     <ClInclude Include="CameraShake.h" />
     <ClInclude Include="CameraUltiMode.h" />
     <ClInclude Include="Ciri.h" />
+    <ClInclude Include="CiriFightController.h" />
+    <ClInclude Include="CiriOriginal.h" />
     <ClInclude Include="CrowsLeshen.h" />
     <ClInclude Include="EffectsFactory.h" />
     <ClInclude Include="Drowned.h" />
@@ -260,6 +262,8 @@
     <ClCompile Include="CameraShake.cpp" />
     <ClCompile Include="CameraUltiMode.cpp" />
     <ClCompile Include="Ciri.cpp" />
+    <ClCompile Include="CiriFightController.cpp" />
+    <ClCompile Include="CiriOriginal.cpp" />
     <ClCompile Include="CrowsLeshen.cpp" />
     <ClCompile Include="EffectsFactory.cpp" />
     <ClCompile Include="Drowned.cpp" />
