--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
@@ -217,16 +217,10 @@
     <ClCompile Include="Ghoul.cpp">
       <Filter>Scripts\Enemies\Ghoul</Filter>
     </ClCompile>
-    <ClCompile Include="CloudLeshen.cpp">
-      <Filter>Scripts\Enemies\Leshen</Filter>
-    </ClCompile>
     <ClCompile Include="CrowsLeshen.cpp">
       <Filter>Scripts\Enemies\Leshen</Filter>
     </ClCompile>
     <ClCompile Include="Leshen.cpp">
-      <Filter>Scripts\Enemies\Leshen</Filter>
-    </ClCompile>
-    <ClCompile Include="MeleeLeshen.cpp">
       <Filter>Scripts\Enemies\Leshen</Filter>
     </ClCompile>
     <ClCompile Include="RootLeshen.cpp">
@@ -237,6 +231,12 @@
     </ClCompile>
     <ClCompile Include="PlayerProjectile.cpp">
       <Filter>Scripts\Player</Filter>
+    </ClCompile>
+    <ClCompile Include="CiriFightController.cpp">
+      <Filter>Scripts\Enemies</Filter>
+    </ClCompile>
+    <ClCompile Include="CiriOriginal.cpp">
+      <Filter>Scripts\Enemies</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -468,9 +468,6 @@
     <ClInclude Include="Ghoul.h">
       <Filter>Scripts\Enemies\Ghoul</Filter>
     </ClInclude>
-    <ClInclude Include="CloudLeshen.h">
-      <Filter>Scripts\Enemies\Leshen</Filter>
-    </ClInclude>
     <ClInclude Include="CrowsLeshen.h">
       <Filter>Scripts\Enemies\Leshen</Filter>
     </ClInclude>
@@ -485,6 +482,12 @@
     </ClInclude>
     <ClInclude Include="PlayerProjectile.h">
       <Filter>Scripts\Player</Filter>
+    </ClInclude>
+    <ClInclude Include="CiriFightController.h">
+      <Filter>Scripts\Enemies</Filter>
+    </ClInclude>
+    <ClInclude Include="CiriOriginal.h">
+      <Filter>Scripts\Enemies</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
