enemy particles with particle pool

--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
@@ -244,7 +244,9 @@
     <ClCompile Include="ParticlePool.cpp">
       <Filter>Scripts\Managers</Filter>
     </ClCompile>
-    <ClCompile Include="ParticleRelease.cpp" />
+    <ClCompile Include="ParticleRelease.cpp">
+      <Filter>Scripts\Managers</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Macros\AlienScripts.h">
@@ -499,7 +501,9 @@
     <ClInclude Include="ParticlePool.h">
       <Filter>Scripts\Managers</Filter>
     </ClInclude>
-    <ClInclude Include="ParticleRelease.h" />
+    <ClInclude Include="ParticleRelease.h">
+      <Filter>Scripts\Managers</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Scripts">
