--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
@@ -241,6 +241,9 @@
     <ClCompile Include="Dummie.cpp">
       <Filter>Scripts\Objects</Filter>
     </ClCompile>
+    <ClCompile Include="VagoneteMove.cpp">
+      <Filter>Scripts\Vagoneta</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Macros\AlienScripts.h">
@@ -492,6 +495,9 @@
     <ClInclude Include="Dummie.h">
       <Filter>Scripts\Objects</Filter>
     </ClInclude>
+    <ClInclude Include="VagoneteMove.h">
+      <Filter>Scripts\Vagoneta</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Scripts">
@@ -550,6 +556,9 @@
     </Filter>
     <Filter Include="Scripts\Enemies\Leshen">
       <UniqueIdentifier>{aa9f3c92-5866-4017-810c-01715c2b2a73}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Scripts\Vagoneta">
+      <UniqueIdentifier>{dcb11fd0-25c8-4f14-ab15-3150225c0a5c}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
 </Project>
